# Test_Data_Factory

./: .gitignore  Makefile  PROJECT_STATUS.md  README.md  demo_test.py  pyproject.toml  requirements.md  run_demo.py  start_demo.py  technical_design.md  temp_test.py
data_factory/: __init__.py
data_factory/core/: interfaces.py  plugin_manager.py
data_factory/web/: main.py
docs/: DEMO_SUMMARY.md
examples/: __init__.py
examples/plugins/user_demo/: __init__.py  main.py
plugins/order_demo/: __init__.py  main.py
scripts/: __init__.py  demo_test.py  quick_test.py  run_demo.py
